--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -107,8 +107,9 @@ config ILLEGAL_POINTER_VALUE
 config STACKTRACE_SUPPORT
 	def_bool y
 
-config HAVE_LATENCYTOP_SUPPORT
-	def_bool y
+config ILLEGAL_POINTER_VALUE
+	hex
+	default 0xdead000000000000
 
 config LOCKDEP_SUPPORT
 	def_bool y
